2012-05-20 Leland Morrison <enigmalee AT sourceforge.net>

	* support/regression/Makefile.in, support/regression/ports/ucr3ka/*,
	  support/regression/fwk/include/testfwk.h: added test-ucr3ka to
	  run regression tests on the rabbit 3000A port

2012-05-20 Leland Morrison <enigmalee AT sourceforge.net>

	* device/include/sdcc-lib.h, device/include/math.h: Added conditional
	  for rabbit 3000
	* devince/include/asm/r3ka/features.h: Added to allow customizations
	  for -mr3ka

2012-05-20 Leland Morrison <enigmalee AT sourceforge.net>

	* src/sdas/asrab/rabbitpst.c: Added mnemonics for rabbit 3000A
	* src/sdas/asrab/rabbitmch.c: Added .r3k flag and rabbit 3000A
	  instructions, changed much of the indentation to make gnu style,
	  and update two functions declarations from K&R style
	* src/sdas/asrab/rabbit.h: Added constants for rabbit 3000 support

2012-05-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/hc08/gen.c:
	  Emit cost information only when --fverbose-asm is used.

2012-05-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: Fixed yet more problems with registers possibly
	  clobbered in division/modulus. Optimized GET_VALUE_AT_ADDRESS
	  including handling non-zero right operand.
	* src/hc08/ralloc.c: Allow packRegsForSupport() to optimize
	  conditions computed for IFX. Handle non-zero right operand
	  for GET_VALUE_AT_ADDRESS when generating pseudo symbol.
	* src/SDCCopt.c: Let GET_VALUE_AT_ADDRESS have non-zero right
	  operand for HC08-like ports. Fix def/use info on operands
	  converted to integer support function calls.

2012-05-20 Philipp Klaus Krause <pkk AT spth.de>

	* sdccconf_in.h:
	  Regenerated, so building with r3ka port disabled works now.

2012-05-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/hc08/gen.c:
	  Improved code for PCALL.

2012-05-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/hc08/gen.c,
	  src/hc08/ralloc2.cc:
	  Improved code for GET_VALUE_AT_ADDRESS.

2012-05-19 Philipp Klaus Krause <pkk AT spth.de>